# cic_motion_model

./: .gitignore  CMakeLists.txt  Makefile  MotionModel.cpp  MotionModel.h  README.md  main.cpp  package.xml  project  project.pro  terminal.sh
config/: params.yaml
gnuplot-iostream-master/: ex
include/: MotionModel.h  Node.h
launch/: cic_motion_model.launch
src/: MotionModel.cpp  Node.cpp
