<?xml version="1.0"?>
<package>
  <name>cic_motion_model</name>
  <version>0.0.0</version>
  
  <description>
      Pacote referente ao trabalho de Tópicos em Robótica 2017/1. 
      O objetivo foi simular um modelo de movimento para o Pioneer e integrar no simulador do ROS
  </description>

  <maintainer email="gabrielmirandatt@gmail.com">Gabriel Miranda</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>p2os_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>p2os_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>